--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ###########################################################
 # if you want to force HTTPS, specify the domain without the http at the start
 # set domain: "your_github_user_name.github.io"
-domain: "tehran.robot-telegram.ir"
+domain: "rasht.robot-telegram.ir"
 
 # your web site url
 # for GitHub Pages, url: "https://your_github_user_name.github.io"
-url: "https://tehran.robot-telegram.ir"
+url: "https://rasht.robot-telegram.ir"
 
 # path to this site
 # if your page is located at https://your_github_user_name.github.io/blog, then set baseurl: "/blog"
@@ -120,6 +120,6 @@ sass:
 ###########################################################
 exclude: ["Gemfile*", "README*", "LICENSE", "docs"]
 
-url: "https://tehran.robot-telegram.ir"
+url: "https://rasht.robot-telegram.ir"
 plugins:
   - jekyll-sitemap
